--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "lenis": "^1.1.14",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
