--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "nuxt": "^3.13.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "vue": "latest",
     "vue-router": "latest"
   },
