--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "nuxt": "^3.13.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "sweetalert2": "^11.14.3",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
