--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "nuxt-split-type": "^0.1.8",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
