--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
       - name: Check out the repo
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Exectute sonarqube scan
       - run: sonar-scanner -Dsonar.projectKey=portfolio -Dsonar.sources=. -Dsonar.host.url=${{ secrets.SONAR_HOST }} -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+
